--- a/portfolio/Page/app/scss/common.scss
+++ b/portfolio/Page/app/scss/common.scss
@@ -338,7 +338,7 @@ body {
                 color: #6f7070;
                  height: 50px;
                  text-align: right;
-                 -webkit-appearance: none;
+                 -webkit-appearance: none !important;
             }
         }
     }
