--- a/portfolio/Page/app/scss/common.scss
+++ b/portfolio/Page/app/scss/common.scss
@@ -75,11 +75,13 @@ body {
                     background: url(../img/logo2.png) no-repeat center center;
                     height: 66px;
                     width: 90px;
+                    background-size: cover;
                 }
                 .link3 {
                     background: url(../img/logo3.png) no-repeat center center;
                     height: 66px;
                     width: 78px;
+                    background-size: cover;
                 }
             }
         }
