--- a/portfolio/Moda/app/scss/_fonts.scss
+++ b/portfolio/Moda/app/scss/_fonts.scss
@@ -1,3 +1,5 @@
 @import "_mixins/font-face";
 
 @include font-face("MuseoSansCyrl500", "../fonts/MuseoSansCyrl/MuseoSansCyrl500/MuseoSansCyrl-500");
+@include font-face("Aempirial", "../fonts/Aempirial/aempirial");
+@include font-face("ParkAvenue", "../fonts/ParkAvenue/Park");
