--- a/portfolio/Moda/app/scss/_libs.scss
+++ b/portfolio/Moda/app/scss/_libs.scss
@@ -1,3 +1,5 @@
 @import "../libs/bootstrap/bootstrap-reboot.scss";
 @import "../libs/bootstrap/bootstrap-grid.scss";
+@import "../libs/OwlCarousel2-2.3.4/owl.theme.default.css";
+@import "../libs/OwlCarousel2-2.3.4/owl.carousel.css";
 
