--- a/portfolio/Moda/app/scss/_media.scss
+++ b/portfolio/Moda/app/scss/_media.scss
@@ -4,42 +4,230 @@
 
 
 
+
+
 /*==========  Desktop First  ==========*/
 
-// <1200px
+@media screen and (max-width: 1290px) {
+    #collections .collection .slide_models {
+        padding-top: 50px;
+    }
+    #collections .collection .slide_models .arrow_l,
+    #collections .collection .slide_models .arrow_r {
+        margin-top: 0px;
+        top: 0;
+    }
+    #collections .collection .slide_models .arrow_l {
+        left: 0;
+    }
+    #collections .collection .slide_models .arrow_r {
+        right: 0;
+    }
+    #collections .collection .capt {
+        padding-bottom: 28px;
+    }
+}
+
+// <1170px 
 @include media-breakpoint-down(lg) {
-    
+    #home .nav li {
+        padding-right: 20px;
+    }
+    #collections .collection .capt .txt .season {
+        font: 2.5em "MuseoSansCyrl500";
+    }
+    #collections .collection .capt .txt h5 {
+        font: 2.5em "MuseoSansCyrl500";
+        padding-bottom: 50px;
+    }
+    #collections .collection .capt .txt .btn {
+        margin-left: 0px;
+    }
+    #contacts .contacts {
+        width: 40%;
+    }
+     #contacts .map {
+     	width: 55%;
+     }
+     #contacts .contacts h6 {
+      font: 3em "MuseoSansCyrl500";
+      padding-top: 35px;
+    }
+    #contacts .contacts .numbers {
+      font: 1.6em "MuseoSansCyrl500";
+    }
 }
 
 // <992px
 @include media-breakpoint-down(md) {
-   
+    #home .nav {
+        display: none;
+    }
+    #home .btn {
+        display: none;
+    }
+    #home .nav-btn {
+        display: block;
+    }
+    #collections .collection .capt .txt .season {
+        font: 1.8em "MuseoSansCyrl500";
+    }
+    #collections .collection .capt .txt h5 {
+        font: 1.8em "MuseoSansCyrl500";
+        padding-bottom: 30px;
+    }
+    #collections .collection .capt .txt .btn {
+        margin-left: 0px;
+    }
+    #collections .collection .capt .txt .num {
+        padding-top: 40px;
+    }
+    #contacts .contacts .numbers {
+      flex-direction: column;
+    }
+    #contacts .contacts h6 {
+      padding-top: 25px;
+    }
 }
 
 // <768px
 @include media-breakpoint-down(sm) {
-    
+    #home h1 {
+        font: 8em "Aempirial";
+        letter-spacing: 2px;
+    }
+    #home p {
+        font: 4em "ParkAvenue";
+        padding-top: 32px;
+    }
+    #collections .collection .capt {
+        flex-direction: column;
+    }
+    #collections .collection .capt .txt .num {
+        display: none;
+    }
+    #collections .collection .capt .txt .season {
+        font: 2.2em "MuseoSansCyrl500";
+        padding-top: 30px;
+    }
+    #collections .collection .capt .txt h5 {
+        font: 2.2em "MuseoSansCyrl500";
+        padding-bottom: 30px;
+    }
+    #collections .collection .capt .txt {
+        margin: 0;
+    }
+    #collections .collection .capt .img .bg {
+        left: -200px;
+        top: 50%;
+    }
+    #collections .collection .capt .txt .btn {
+        display: none;
+    }
+    #collections .collection .capt {
+        padding-bottom: 10px;
+    }
+    #collections .collection .slide_models .arrow_l {
+        left: 20px;
+    }
+    #collections .collection .slide_models .arrow_r {
+        right: 20px;
+    }
+    #collections .collection .slide_models .btn {
+        display: block;
+    }
+    #questions form {
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+    }
+    #questions .input,
+    #questions .text {
+        width: 100%;
+        margin: 0;
+        margin-bottom: 14px;
+    }
+    #questions .text {
+        height: 88px;
+    }
+    #questions .submit {
+        width: 215px;
+        height: 50px;
+    }
+     #contacts .content {
+     	flex-direction: column;
+     }
+     #contacts .map {
+     	width: 100%;
+     	height: 195px;
+     }
+     #contacts .contacts {
+     	width: 100%;
+     	padding-top: 190px;
+     }
+     #contacts .map .bg {
+     	left: -250px;
+     	top: 180px;
+     }
+     #nav .nav li {
+     	padding-right: 20px;
+     }
+     #contacts .contacts .socials {
+     	padding-top: 20px;
+     }
+     #contacts .contacts .adress {
+     	padding-top: 20px;
+     }
+     #footer .copy {
+  padding-top: 25px;
+  padding-bottom: 0px; 
+  line-height: 200%;
+  }
 }
 
 // <576px
 @include media-breakpoint-down(xs) {
-   
+    #home header {
+        height: 90px;
+    }
+    #home .logo {
+        padding-left: 5px;
+    }
+    #home p {
+        font: 3em "ParkAvenue";
+        padding-top: 20px;
+    }
+    #about h3 {
+        font: 8.5em "Aempirial";
+    }
+    #about p {
+        font: 1.6em "MuseoSansCyrl500";
+        letter-spacing: 2px;
+        line-height: 150%;
+        padding-top: 47px;
+    }
+    #reviews .scontent .quot {
+        display: none;
+    }
+    #reviews .more {
+        padding-bottom: 80px;
+        padding-top: 30px;
+    }
+    #questions .content {
+        background: none;
+    }
+    #questions p {
+        padding-bottom: 20px;
+    }
+    #questions form {
+        padding-bottom: 170px;
+    }
+    #nav .nav {
+    	flex-direction: column;
+    	align-items: center;
+    }
+    #nav .nav li {
+    	padding: 0px;
+    	padding-bottom: 14px;
+    }
 }
-
-
-
-
-
-/*==========  Mobile First  ==========*/
-
-// ≤576px
-@include media-breakpoint-up(sm) {}
-
-// ≤768px
-@include media-breakpoint-up(md) {}
-
-// ≤992px
-@include media-breakpoint-up(lg) {}
-
-// ≤1200px
-@include media-breakpoint-up(xl) {}
