--- a/portfolio/Moda/app/scss/common.scss
+++ b/portfolio/Moda/app/scss/common.scss
@@ -7,8 +7,29 @@ body {
     font-size: 10px;
 }
 
+.body_active {
+    overflow: hidden;
+}
+
 .container {
-	//overflow: hidden;
+    //overflow: hidden;
+}
+
+.sub {
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    transition: .5s;
+    display: none;
+}
+
+.sub_active {
+    z-index: 999;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: block;
 }
 
 h3 {
@@ -37,14 +58,82 @@ h3 {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        z-index: 2;
     }
     .logo {
+        position: relative;
         a {
             display: block;
             width: 160px;
             height: 50px;
             background: url(../img/logo.png) no-repeat center bottom;
         }
+    }
+    .mobile_nav {
+        position: fixed;
+        top: 0px;
+        left: -100%;
+        height: 100vh;
+        width: 243px;
+        transition: .5s;
+        background: #fff url(../img/bg_mobile_nav.png) no-repeat top right;
+        z-index: 1000;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        .nav_m {
+            flex-direction: column;
+            padding-top: 50px;
+            padding-left: 0px;
+            li {
+                padding: 5px 0;
+            }
+            a {
+                color: #000;
+                font: 1.8em "MuseoSansCyrl500";
+                padding: 20px 0;
+                text-transform: uppercase;
+                text-decoration: none;
+                display: block;
+                padding-left: 34px;
+                &:hover {
+                    color: #fe1119;
+                }
+            }
+        }
+        .btn_mobile {
+            margin-bottom: 96px;
+            a {
+                margin: 0 auto;
+                position: relative;
+                display: flex;
+                text-decoration: none;
+                color: #fff;
+                width: 197px;
+                height: 45px;
+                background: #bb1c27;
+                font: 1.4em "MuseoSansCyrl500";
+                transition: .1s ease;
+                &:hover {
+                    background-color: #b31a25;
+                }
+                .icon {
+                    display: block;
+                    height: 14px;
+                    width: 19px;
+                    background: url(../img/speech-bubbles-comment-option.png) no-repeat center top;
+                    margin-right: 15px;
+                    margin-top: 14px;
+                    margin-left: 31px;
+                }
+                .txt {
+                    padding-top: 14px;
+                }
+            }
+        }
+    }
+    .nav_active {
+        left: 0%;
     }
     .nav {
         display: flex;
@@ -132,9 +221,12 @@ h3 {
         transition: .3s ease;
     }
     .nav-btn {
-    	display: none;
+        display: none;
+        margin-right: 10px;
+        position: relative;
+        z-index: 1000;
         a {
-        	  display: block;
+            display: block;
             position: relative;
             height: 32px;
             width: 35px;
@@ -186,13 +278,14 @@ h3 {
                 width: 35px;
             }
             span {
-            	background-color: transparent !important;
-            	            }
+                background-color: transparent !important;
+            }
         }
     }
     .title {
         max-width: 700px;
         margin: 0 auto;
+        position: relative;
     }
     h1 {
         font: 12em "Aempirial";
@@ -213,6 +306,7 @@ h3 {
         bottom: 47px;
         left: 50%;
         margin-left: -47px;
+        z-index: 1;
         a {
             position: relative;
             z-index: 2;
@@ -286,51 +380,51 @@ h3 {
         }
     }
     .collection {
-    	.btn {
-                    position: relative;
-                    margin-left: 138px;
-                    width: 245px;
-                    .bg {
-                        position: absolute;
-                        top: -10px;
-                        right: -15px;
-                        width: 245px;
-                        height: 100%;
-                        background: url(../img/btn_bg_title.png) no-repeat;
-                        z-index: 1;
-                    }
-                    a {
-                        position: relative;
-                        z-index: 2;
-                        font: 1.4em "MuseoSansCyrl500";
-                        color: #000;
-                        display: block;
-                        height: 45px;
-                        width: 245px;
-                        border: 1px solid #000;
-                        text-decoration: none;
-                        transition: .3s ease;
-                        display: flex;
-                        padding-left: 25px;
-                        &:hover {
-                            background: #bb1c27;
-                            border: 1px solid #bb1c27;
-                        }
-                        .icon {
-                            display: block;
-                            height: 13px;
-                            width: 16px;
-                            background: url(../img/slide_arrow.png) no-repeat center top;
-                            margin-right: 15px;
-                            margin-top: 15px;
-                            margin-left: 30px;
-                        }
-                        .txt {
-                            padding-top: 13px;
-                            margin: 0;
-                        }
-                    }
+        .btn {
+            position: relative;
+            margin-left: 138px;
+            width: 245px;
+            .bg {
+                position: absolute;
+                top: -10px;
+                right: -15px;
+                width: 245px;
+                height: 100%;
+                background: url(../img/btn_bg_title.png) no-repeat;
+                z-index: 1;
+            }
+            a {
+                position: relative;
+                z-index: 2;
+                font: 1.4em "MuseoSansCyrl500";
+                color: #000;
+                display: block;
+                height: 45px;
+                width: 245px;
+                border: 1px solid #000;
+                text-decoration: none;
+                transition: .3s ease;
+                display: flex;
+                padding-left: 25px;
+                &:hover {
+                    background: #bb1c27;
+                    border: 1px solid #bb1c27;
                 }
+                .icon {
+                    display: block;
+                    height: 13px;
+                    width: 16px;
+                    background: url(../img/slide_arrow.png) no-repeat center top;
+                    margin-right: 15px;
+                    margin-top: 15px;
+                    margin-left: 30px;
+                }
+                .txt {
+                    padding-top: 13px;
+                    margin: 0;
+                }
+            }
+        }
         .capt {
             display: flex;
             flex-direction: row;
@@ -385,9 +479,9 @@ h3 {
         .slide_models {
             position: relative;
             .btn {
-            	margin: 0 auto;
-            	display: none;
-            	margin-top: 40px;
+                margin: 0 auto;
+                display: none;
+                margin-top: 40px;
             }
             .carousel {}
             .arrow_l,
@@ -742,7 +836,7 @@ h3 {
             text-decoration: underline;
             display: flex;
             p {
-            	padding-right: 20px;
+                padding-right: 20px;
             }
         }
         .adress {
@@ -756,9 +850,9 @@ h3 {
             padding-left: 9px;
             span {
                 display: inline-block;
-                background: url(../img/envelope.png);
                 width: 19px;
                 height: 15px;
+                background: url('../img/socials_sprite.png') -49px -10px;
                 margin-bottom: -2px;
                 margin-right: 11px;
             }
@@ -770,18 +864,22 @@ h3 {
             padding-bottom: 30px;
             a {
                 display: block;
-                width: 19px;
-                height: 19px;
                 margin-right: 20px;
             }
             .insta {
-                background: url(../img/instagram.png) no-repeat center center;
+                width: 19px;
+                height: 19px;
+                background: url('../img/socials_sprite.png') -10px -10px;
             }
             .vk {
-                background: url(../img/vk.png) no-repeat center center;
+                width: 19px;
+                height: 19px;
+                background: url('../img/socials_sprite.png') -41px -42px;
             }
             .facebook {
-                background: url(../img/facebook.png) no-repeat center center;
+                width: 11px;
+                height: 19px;
+                background: url('../img/socials_sprite.png') -10px -49px;
             }
         }
     }
