--- a/portfolio/Moda/app/scss/common.scss
+++ b/portfolio/Moda/app/scss/common.scss
@@ -44,6 +44,7 @@ h3 {
     .content {
         position: relative;
         height: 100vh;
+        min-height: 460px;
         display: flex;
         flex-direction: column;
         justify-content: center;
