--- a/portfolio/Moda/app/scss/common.scss
+++ b/portfolio/Moda/app/scss/common.scss
@@ -930,4 +930,45 @@ h3 {
     }
 }
 
+
+
+
+
+
+
+// Стили для страницы Contacts.html
+
+
+
+
+
 @import 'media';
+
+#home {
+    background: #000000;
+    z-index: 2;
+    .content {
+        height: 135px;
+        min-height: 0;
+        header {
+        height: 100%;
+    }
+    }
+}
+
+#contacts {
+    .container {
+        background: url(../img/bg_about.png) no-repeat center top;
+        background-position: 50% -50px;
+    }
+    h3 {
+        padding-top: 70px;
+        padding-bottom: 100px;
+    }
+}
+
+#footer {
+    .copy {
+        padding-bottom: 20px;
+    }
+}
